made lavender color darker in darkmode, deleted unnecessary spacing. Also ran css + html files through validator to correct warnings

--- a/Grupparbete - Javascript & html/assets/css/style.css
+++ b/Grupparbete - Javascript & html/assets/css/style.css
@@ -1,3 +1,4 @@
+/********************************************** BASE COLORS ***********************************************/
 :root {
     --darkestblue-color: #7A8ABF;
     --darkblue-color: #8FB0D8;
@@ -7,50 +8,18 @@
     --beige-color: #FFF2E2;
     --base-text: #000000;
 }
-.darkmode {
-    --darkestblue-color: #101229;
-    --darkblue-color: #454E74;
-    --lightblue-color: #7A8ABF;
-    --darklaven-color: #7B7C9B;
-    --lightlaven-color: #9A9CC0;
-    --beige-color: #EBD3CB;
-    --base-text: #FFF2E2;
-}
-
-#theme-switch {
-    height: 50px;
-    width: 50px;
-    padding: 0;
-    border-radius: 50%;
-    background-color: blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#theme-switch svg {
-    fill: white;
-}
-#theme-switch svg:last-child {
-    display: none;
-
-}
-.darkmode #theme-switch svg:first-child{
-    display: none;
-}
-.darkmode #theme-switch svg:last-child {
-    display: block;
-}
-
+/**********************************************************************************************************/
 * {
     box-sizing: border-box;
 }
+
 body {
     background: linear-gradient(44deg,var( --darkblue-color ), var(--beige-color) 50%, var( --darkblue-color ));
     margin: 0;
 }
+
 .outer-container {
     display: grid;
-
     height: 100vh;
     grid-template-areas:
         "header"
@@ -58,6 +27,7 @@ body {
         "footer";
     grid-template-rows: auto 1fr auto;
 }
+
 header {
     grid-area: header;
     height: 200px;
@@ -69,23 +39,28 @@ header {
     background-size: contain;
     background-repeat: no-repeat;
 }
+
 .header-bgimg {
 }
+
 main {
     grid-area: main;
 }
+
 .inner-container {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
     height: 100%;
 }
+
 footer {
     grid-area: footer;
     background-color: var(--darkestblue-color);
     height: 75px;
 }
-
+/**********************************************************************************************************/
+/********************************************* WEATHER INFO BOX *******************************************/
 .land-1 {
     background: linear-gradient(to bottom, var(--darkblue-color), var(--lightblue-color), var(--beige-color));
     grid-area: 1 / 1 / 3 / 2;
@@ -99,6 +74,7 @@ footer {
     flex-direction: column;
     justify-content: space-evenly;
 }
+
 .forcast-land-2 {
     background-color: var(--darkblue-color);
     grid-area: 2 / 2 / 3 / 3;
@@ -129,8 +105,9 @@ footer {
     .forcast-land-2.compare {
         display: block;
     }
+
     .forcast-land-2.compare {
-        display:flex;
+        display: flex;
         flex-direction: column;
         justify-content: space-evenly;
     }
@@ -140,6 +117,7 @@ footer {
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5), 0px 0px 15px rgba(0, 0, 0, 0.9);
     margin: 10px;
 }
+
     .land-box.compare {
         border-top-left-radius: 1.7em;
         border-top-right-radius: 1.7em;
@@ -154,17 +132,17 @@ footer {
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.9);
     margin: 10px;
 }
+
     .forcast-box.compare {
-        border-top-left-radius:0;
+        border-top-left-radius: 0;
         border-top-right-radius: 0;
         border-bottom-left-radius: 1.7em;
         border-bottom-right-radius: 1.7em;
         margin-top: 0;
     }
-
-
-/***************************************** Button ******************************************/
-.button-73 {
+/**********************************************************************************************************/
+/********************************************* MENU BUTTONS ***********************************************/
+.menu-button {
     appearance: none;
     background-color: var( --lightlaven-color);
     border-radius: 40em;
@@ -182,30 +160,48 @@ footer {
     width: 150px;
 }
 
-    .button-73:hover, .button-73:active {
+    .menu-button:hover, .menu-button:active {
         background-color: var(--lightblue-color);
         box-shadow: var(--darkblue-color) 0 -6px 8px inset;
         transform: scale(1.125);
     }
+/**********************************************************************************************************/
+/********************************************** THEME SWITCH **********************************************/
+#theme-switch {
+    height: 50px;
+    width: 50px;
+    padding: 0;
+    border-radius: 50%;
+    background-color: var(--darklaven-color);
+    border-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+    #theme-switch svg {
+        fill: var(--beige-color);
+    }
 
-/*******************************************************************************************/
+        #theme-switch svg:last-child {
+            display: none;
+        }
 
+.darkmode #theme-switch svg:first-child {
+    display: none;
+}
 
+.darkmode #theme-switch svg:last-child {
+    display: block;
+}
 
-
-
-/*  grid-area: row-start / col-start / row-end / col-end;
-   
-            #ebd3cb Beige
-            #fff2e2 Ljus beige
-
-    #363B6F svart
-    #c5c9fe lila
-    #7A8ABF vinter blå
-    #A4D5F1 ljusblå
-    #D9E1F9 lavendel
-    lighter lavendel: #E3E9FD
-
-        lila: #AF40FF
-*/
+.darkmode {
+    --darkestblue-color: #101229;
+    --darkblue-color: #454E74;
+    --lightblue-color: #A2A6BD;
+    --darklaven-color: #61627D;
+    --lightlaven-color: #9A9CC0;
+    --beige-color: #EBD3CB;
+    --base-text: #FFF2E2;
+}
+/**********************************************************************************************************/
